@@ -1,0 +1,24 @@
+# Speed-Link Competition Pro
+
+[device]
+name = Competition Pro
+type = joystick/joystick
+
+[menu]
+axis_0_neg = left
+axis_0_pos = right
+axis_1_neg = up
+axis_1_pos = down
+button_0 = primary
+button_1 = back
+button_2 = select
+button_3 = start
+
+[amiga]
+axis_0_neg = left
+axis_0_pos = right
+axis_1_neg = up
+axis_1_pos = down
+button_0 = 1
+button_1 = 2
+button_2 = 3
